--- a/codigo.html
+++ b/codigo.html
@@ -9,37 +9,44 @@
       background-color: #f3e0c0;
       font-family: 'Comic Sans MS', cursive, sans-serif;
       text-align: center;
-      padding: 50px;
+      padding: 20px;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
     }
 
-    .flower {
-      display: inline-block;
-      margin-top: 50px;
-    }
-
-    .flower img {
-      width: 150px;
+    .gif img {
+      width: 100%;
+      max-width: 300px;
+      height: auto;
+      border-radius: 10px;
     }
 
     h1 {
-      font-size: 2em;
+      font-size: 1.8em;
       color: #333;
+      margin: 20px 10px;
     }
 
     .btn {
       background-color: #f8d4d4;
       border: 2px solid #d8a4a4;
       color: #333;
-      padding: 10px 20px;
+      padding: 12px 20px;
       font-size: 1em;
       border-radius: 10px;
       cursor: pointer;
-      margin-top: 20px;
       transition: background-color 0.3s ease;
-      display: block;
-      width: 200px;
-      margin: 10px auto;
+      width: 80%;
+      max-width: 250px;
       text-decoration: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 10px 0;
     }
 
     .btn:hover {
@@ -47,8 +54,8 @@
     }
 
     .btn img {
-      width: 20px;
-      vertical-align: middle;
+      width: 24px;
+      margin-left: 8px;
     }
 
     .emoji {
