--- a/carta.html
+++ b/carta.html
@@ -6,40 +6,39 @@
     <title>Carta de San Valentín</title>
     <style>
         body {
-            background-color: #fff;
-            font-family: 'Times New Roman', serif;
+            background-color: #fce8e8;
+            font-family: 'Georgia', serif;
             text-align: center;
             padding: 20px;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .container {
-            width: 80%;
+            width: 90%;
             max-width: 800px;
-            margin: auto;
-            background-color: #f9f9f9;
-            padding: 30px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            background-color: #fff;
+            padding: 25px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            text-align: center;
         }
 
         h1 {
-            font-size: 2.5em;
+            font-size: 2em;
+            color: #d87a7a;
             margin-bottom: 10px;
-            font-weight: bold;
-        }
-
-        .subtitle {
-            font-size: 1.2em;
-            color: #555;
         }
 
         .image-container {
-            text-align: center;
-            margin: 20px 0;
+            margin: 15px 0;
         }
 
         .image-container img {
-            width: 80%;
-            max-width: 400px;
+            width: 100%;
+            max-width: 350px;
             border-radius: 10px;
         }
 
@@ -47,14 +46,31 @@
             font-size: 1.1em;
             text-align: justify;
             line-height: 1.6;
-            margin: 20px 0;
-            padding: 0 10px;
+            margin: 15px 0;
+            color: #333;
+            padding: 0 15px;
         }
 
         .signature {
-            font-size: 1.2em;
+            font-size: 1.3em;
             font-weight: bold;
+            color: #b14b4b;
             margin-top: 20px;
+        }
+
+        @media (max-width: 600px) {
+            .container {
+                padding: 20px;
+            }
+
+            h1 {
+                font-size: 1.8em;
+            }
+
+            .letter {
+                font-size: 1em;
+                padding: 0 10px;
+            }
         }
     </style>
 </head>
@@ -72,9 +88,11 @@
             Cada día contigo es un recordatorio de lo afortunado que soy por tenerte a mi lado.
             Tu amor me da paz, tu sonrisa es mi alegría y tus abrazos son mi refugio.
             Eres mi razón para seguir y mi sueño hecho realidad.
+        </p>
 
+        <p class="letter">
             A tu lado, cada momento se convierte en un recuerdo inolvidable.    
-            Tus palabras son el consuelo en mis días difíciles y tu risa, la melodía que alegra mi corazón.       
+            Tus palabras son el consuelo en mis días difíciles y tu risa, la melodía que alegra mi corazón.
         </p>
 
         <p class="letter">
@@ -83,8 +101,9 @@
             Eres mi compañera de vida, mi mejor amiga y mi mayor apoyo.
         </p>
 
-        <p class="signature">Con todo mi amor, Sebastian ❤️</p>
+        <p class="signature">Con todo mi amor, Sebastián ❤️</p>
     </div>
 
 </body>
 </html>
+
