--- a/codigo.html
+++ b/codigo.html
@@ -10,43 +10,33 @@
       font-family: 'Comic Sans MS', cursive, sans-serif;
       text-align: center;
       padding: 20px;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
     }
 
     .gif img {
       width: 100%;
       max-width: 300px;
-      height: auto;
-      border-radius: 10px;
     }
 
     h1 {
-      font-size: 1.8em;
+      font-size: 2em;
       color: #333;
-      margin: 20px 10px;
     }
 
     .btn {
       background-color: #f8d4d4;
       border: 2px solid #d8a4a4;
       color: #333;
-      padding: 12px 20px;
+      padding: 10px 20px;
       font-size: 1em;
       border-radius: 10px;
       cursor: pointer;
-      transition: background-color 0.3s ease;
-      width: 80%;
-      max-width: 250px;
-      text-decoration: none;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin: 10px 0;
+      width: 220px;
+      margin: 10px auto;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
     }
 
     .btn:hover {
@@ -54,8 +44,8 @@
     }
 
     .btn img {
-      width: 24px;
-      margin-left: 8px;
+      width: 20px;
+      margin-left: 10px;
     }
 
     .emoji {
@@ -75,9 +65,9 @@
     Carta <img src="carta.png" alt="Ícono de carta">
   </a>
 
-  <button class="btn" onclick="downloadFile('video.mp4', 'Video_San_Valentin.mp4')">
-    Descargar Video 🎥
-  </button>
+  <a class="btn" href="#" onclick="downloadFile('video.mp4', 'Video_San_Valentin.mp4')">
+    Descargar Video <img src="video.png" alt="Ícono de video">
+  </a>
 
   <a class="btn" href="cupones.html">
     Cupones 🎁
