--- a/codigo.html
+++ b/codigo.html
@@ -66,7 +66,7 @@
   </a>
 
   <a class="btn" href="#" onclick="downloadFile('video.mp4', 'Video_San_Valentin.mp4')">
-    Descargar Video <img src="https://cdn-icons-png.flaticon.com/512/84/84142.png" alt="Ícono de video">
+    Descargar Video 🎥
   </a>
 
   <a class="btn" href="cupones.html">
