--- a/codigo.html
+++ b/codigo.html
@@ -62,7 +62,7 @@
   <h1>¿Quieres ser mi San Valentín? <span class="emoji">❤️</span></h1>
 
   <a class="btn" href="carta.html">
-    Carta <img src="carta.png" alt="Ícono de carta">
+    Carta 💌
   </a>
 
   <a class="btn" href="#" onclick="downloadFile('video.mp4', 'Video_San_Valentin.mp4')">
