--- a/carta.html
+++ b/carta.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: #fce8e8;
-            font-family: 'Georgia', serif;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
             text-align: center;
             padding: 20px;
             margin: 0;
