--- a/cupones.html
+++ b/cupones.html
@@ -56,6 +56,7 @@
             color: #333;
             padding: 12px;
             font-size: 1em;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
             border-radius: 10px;
             cursor: pointer;
             transition: background-color 0.3s ease;
