--- a/cupones.html
+++ b/cupones.html
@@ -128,6 +128,7 @@
             <li>Pintar cuadritos viendo el atardecer</li>
             <li>Comer piqueos y alguna bebida</li>
             <li>Noche de Jacuzzi para terminar un día bonito</li>
+            <li>Una foto juntos para recordar este momento único</li>
             <li>Válido a partir de las 5pm</li>
         </ul>
         <button class="btn" onclick="enviarCorreo('Cupón Playero')">Canjear Cupón</button>
@@ -150,11 +151,11 @@
     <div class="coupon">
         <h2>Cupón de Noche de Cine 🍿🎬</h2>
         <ul>
-            <li>Elige tus películas favoritas o románticas</li>
+            <li>Elige pelicula a ver en el cine</li>
             <li>Palomitas de maíz y snacks dulces y salados</li>
-            <li>Manta suave para compartir un rato cómodo</li>
-            <li>Refrescos, chocolate caliente o té para acompañar</li>
-            <li>Válido para cualquier noche de febrero</li>
+            <li>Refrescos o gaseosa para acompañar</li>
+            <li>Una foto juntos para recordar este momento único</li>
+            <li>Válido a partir de las 7:00 pm</li>
         </ul>
         <button class="btn" onclick="enviarCorreo('Cupón de Noche de Cine')">Canjear Cupón</button>
     </div>
