--- a/cupones.html
+++ b/cupones.html
@@ -122,7 +122,7 @@
     <h1>Cupones Especiales para Ti 💝</h1>
 
     <div class="coupon">
-        <h2>Cupón Playero 🏖️🍷</h2>
+        <h2>Cupón de Picnic 🏖️🍷</h2>
         <ul>
             <li>Ver el atardecer en la playa</li>
             <li>Pintar cuadritos viendo el atardecer</li>
