--- a/cupones.html
+++ b/cupones.html
@@ -126,7 +126,7 @@
         <ul>
             <li>Ver el atardecer en la playa</li>
             <li>Pintar cuadritos viendo el atardecer</li>
-            <li>Comer piqueos y alguna bebida</li>
+            <li>Vino y cositas para picar (uvas, queso, galletas saladas, jamón, aceitunas, otros)</li>
             <li>Noche de Jacuzzi para terminar un día bonito</li>
             <li>Una foto juntos para recordar este momento único</li>
             <li>Válido a partir de las 5:00 pm</li>
